--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@ input {
   margin-left: 20px;
 }
 
+input[type="checkbox"] {
+  margin-right: 10px;
+  margin-left: 0;
+}
+
 button {
   margin-top: 20px;
 }
